tests/errors/sem.invalid-arg.fficall-libpath.or
dl :: @load "dynlib.or";

main :: () -> void {
    lib :: dl.lib_t.{
        "decl",
        "asdasda.a",
    };
    @fficall lib, void, "something";
};
